# convergent-beauty

./: .pre-commit-config.yaml
backend/: pyproject.toml  pytest.ini
backend/backend/: __init__.py  jaimie.txt  jblack.txt  puppy.txt
backend/backend/auth/: serializers.py  urls.py  views.py
backend/backend/backend/: settings.py  urls.py
backend/backend/products/: models.py  serializers.py  urls.py  views.py
backend/backend/products/migrations/: 0001_initial.py
backend/backend/profanity/: .gitignore  README.md  extras.py  tests.py  validators.py
backend/backend/recommendations/: models.py  serializers.py  tests.py  urls.py  views.py
backend/backend/search/: urls.py  views.py
backend/backend/search_engine/: client.py  errors.py  services.py
frontend/: index.html  package-lock.json  package.json
frontend/public/: site.webmanifest
frontend/src/: App.vue  main.ts
frontend/src/assets/: base.scss
frontend/src/router/: index.ts
frontend/src/stores/: auth.store.ts
frontend/src/views/: AddProductView.vue  HomeView.vue  LoginView.vue  ProductNotesView.vue  RecommendationView.vue  SignUpView.vue  UserProductsView.vue
